# dask-histogram

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yml  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py
.builds/: linux.yml
.github/workflows/: cd.yml  ci.yml
docs/: api.rst  conf.py  contrib.rst  dh_demo.ipynb  examples.rst  index.rst  intro.rst  quick.rst  release.rst  requirements.txt
docs/source/: api.rst  conf.py  index.rst
src/dask_histogram/: __init__.py  array.py  bins.py  boost.py  config.py  core.py  hist.py  histogram.yaml  hlg.py  layers.py  routines.py  sizeof.py  typing.py
src/sandbox/: rand.py
tests/: test_array.py  test_bins.py  test_boost.py  test_core.py  test_hist.py  test_hlg.py  test_layers.py  test_onedim.py  test_routines.py  test_sizeof.py
