[build-system]
requires = ["hatchling>=1.8.0", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "dask-histogram"
description = "Histogramming with Dask."
readme = "README.md"
license = {text = "BSD-3-Clause"}
requires-python = ">=3.8"
authors = [
    { name = "Doug Davis", email = "ddavis@ddavis.io" },
]
classifiers = [
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "boost-histogram>=1.3.2",
    "dask>=2021.03.0",
]
dynamic = ["version"]

[project.optional-dependencies]
complete = [
    "dask-sphinx-theme >=3.0.2",
    "dask[array,dataframe]",
    "dask-awkward >=2023.10.0",
    "hist",
    "pytest",
    "sphinx >=4.0.0",
    "sphinxcontrib-applehelp>=1.0.0,<1.0.7",
    "sphinxcontrib-devhelp>=1.0.0,<1.0.6",
    "sphinxcontrib-htmlhelp>=2.0.0,<2.0.5",
    "sphinxcontrib-serializinghtml>=1.1.0,<1.1.10",
    "sphinxcontrib-qthelp>=1.0.0,<1.0.7",
]
docs = [
    "dask-sphinx-theme >=3.0.2",
    "dask[array,dataframe]",
    "dask-awkward >=2023.10.0",
    # FIXME: `sphinxcontrib-*` pins are a workaround until we have sphinx>=5.
    #        See https://github.com/dask/dask-sphinx-theme/issues/68.
    "sphinx >=4.0.0",
    "sphinxcontrib-applehelp>=1.0.0,<1.0.7",
    "sphinxcontrib-devhelp>=1.0.0,<1.0.6",
    "sphinxcontrib-htmlhelp>=2.0.0,<2.0.5",
    "sphinxcontrib-serializinghtml>=1.1.0,<1.1.10",
    "sphinxcontrib-qthelp>=1.0.0,<1.0.7",
]
test = [
    "dask[array,dataframe]",
    "dask-awkward >=2023.10.0",
    "hist",
    "pytest",
]
[tool.hatch.build.targets.sdist.force-include]
"src/dask_histogram_sizeof" = "src/dask_histogram_sizeof"

[tool.hatch.build.targets.wheel]
packages = ["src/dask_histogram", "src/dask_histogram_sizeof"]

[project.urls]
Homepage = "https://github.com/dask-contrib/dask-histogram"
Documentation = "https://dask-histogram.readthedocs.io/"
"Bug Tracker" = "https://github.com/dask-contrib/dask-histogram/issues"

[project.entry-points."dask.sizeof"]
dask_histogram = "dask_histogram_sizeof:register"

[tool.hatch.version]
source = "vcs"
path = "src/dask_histogram/__init__.py"

[tool.hatch.build.hooks.vcs]
version-file = "src/dask_histogram/version.py"

[tool.hatch.build.targets.sdist]
include = ["/src"]

[tool.pytest.ini_options]
addopts = "-v"
testpaths = ["tests"]

[tool.isort]
profile = "black"
line_length = 88
src_paths = ["src", "tests"]

[tool.mypy]
python_version = "3.9"
files = ["src", "tests"]
warn_unused_configs = true
show_error_codes = true
allow_incomplete_defs = false
allow_untyped_decorators = false
ignore_missing_imports = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unreachable = true

[[tool.mypy.overrides]]
module = ["tlz.*"]
ignore_missing_imports = true

[tool.pydocstyle]
ignore = "D105"

[tool.ruff]
ignore = ["E501"]
per-file-ignores = {"__init__.py" = ["E402", "F401"]}
