[build-system]
requires = ["hatchling>=1.8.0", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "dask-histogram"
description = "Histogramming with Dask."
readme = "README.md"
license = {text = "BSD-3-Clause"}
requires-python = ">=3.10"
authors = [
    { name = "Doug Davis", email = "ddavis@ddavis.io" },
]
classifiers = [
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "boost-histogram>=1.3.2",
    "dask>=2021.03.0",
    "dask-awkward >=2025",
]
dynamic = ["version"]

[project.optional-dependencies]
dev = [
    "dask-histogram[test,docs]"
]
docs = [
    "dask-sphinx-theme>=4.0.0; python_version>='3.11'",
    "dask[array,dataframe]",
    "sphinx>=5.0.0; python_version>='3.11'",
]
test = [
    "dask[array,dataframe]",
    "hist",
    "pytest",
]
[tool.hatch.build.targets.sdist.force-include]
"src/dask_histogram_sizeof" = "src/dask_histogram_sizeof"

[tool.hatch.build.targets.wheel]
packages = ["src/dask_histogram", "src/dask_histogram_sizeof"]

[project.urls]
Homepage = "https://github.com/dask-contrib/dask-histogram"
Documentation = "https://dask-histogram.readthedocs.io/"
"Bug Tracker" = "https://github.com/dask-contrib/dask-histogram/issues"

[project.entry-points."dask.sizeof"]
dask_histogram = "dask_histogram_sizeof:register"

[tool.hatch.version]
source = "vcs"
path = "src/dask_histogram/__init__.py"

[tool.hatch.build.hooks.vcs]
version-file = "src/dask_histogram/version.py"

[tool.hatch.build.targets.sdist]
include = ["/src"]

[tool.pytest.ini_options]
addopts = "-v"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.10"
files = ["src", "tests"]
warn_unused_configs = true
show_error_codes = true
allow_incomplete_defs = false
allow_untyped_decorators = false
ignore_missing_imports = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unreachable = true

[[tool.mypy.overrides]]
module = ["tlz.*"]
ignore_missing_imports = true

[tool.pydocstyle]
ignore = "D105"

[tool.ruff]
target-version = "py310"
line-length = 88
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I"]
ignore = ["E501"]
per-file-ignores = {"__init__.py" = ["E402", "F401"]}
