[metadata]
name = dask-histogram
author = Doug Davis
author_email = ddavis@ddavis.io
maintainer = Doug Davis
maintainer_email = ddavis@ddavis.io
url = https://github.com/douglasdavis/dask-histogram
description = Histogramming with dask.
long_description = file: README.md
long_description_content_type = text/markdown
license = BSD 3-clause
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3 :: Only

[options]
python_requires = >=3.6
packages = find:
package_dir =
    =src
install_requires =
    boost-histogram >=1.0.0
    dask >=2021.01.0

[options.packages.find]
where = src
exclude =
    tests

[flake8]
ignore = E501
