[metadata]
name = dask-histogram
author = Doug Davis
author_email = ddavis@ddavis.io
maintainer = Doug Davis
maintainer_email = ddavis@ddavis.io
description = Histogramming with dask.
long_description = file: README.md
long_description_content_type = text/markdown
license = BSD 3-clause
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Information Analysis
    Topic :: Scientific/Engineering :: Mathematics
    Topic :: Scientific/Engineering :: Physics

[options]
python_requires = >=3.7
packages = find:
package_dir =
    =src
install_requires =
    boost-histogram >=1.0.0
    dask >=2021.01.0
zip_safe = False

[options.packages.find]
where = src
exclude =
    tests

[flake8]
ignore = E501

[mypy]
python_version = 3.7
warn_unused_configs = True
files = src, tests

[mypy-dask.*]
ignore_missing_imports = True
