[metadata]
name = dask_histogram
description = Histogramming with Dask.
long_description = file: README.md
long_description_content_type = text/markdown
author = Doug Davis
author_email = ddavis@ddavis.io
maintainer = Doug Davis
maintainer_email = ddavis@ddavis.io
license = BSD-3-Clause
license_file = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Information Analysis
    Topic :: Scientific/Engineering :: Mathematics
    Topic :: Scientific/Engineering :: Physics

[options]
packages = find:
install_requires =
    boost-histogram>=1.2.0
    dask>=2021.03.0
python_requires = >=3.7
package_dir =
    =src
zip_safe = False

[options.packages.find]
where = src
exclude =
    tests

[flake8]
ignore = E501
